--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: cms_db
+          name: mysitedb
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
