--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
 attrs==25.1.0
+certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.2
+cloudinary==1.44.1
 dj-database-url==3.0.1
 Django==5.1.1
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.15.2
@@ -11,6 +14,7 @@ djangorestframework_simplejwt==5.4.0
 drf-spectacular==0.28.0
 gunicorn==23.0.0
 h11==0.16.0
+idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -22,9 +26,12 @@ PyJWT==2.10.1
 PyYAML==6.0.2
 referencing==0.36.2
 reportlab==4.4.2
+requests==2.32.4
 rpds-py==0.22.3
+six==1.17.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
+urllib3==2.5.0
 uvicorn==0.35.0
 whitenoise==6.9.0
