--- a/render.yaml
+++ b/render.yaml
@@ -21,8 +21,8 @@ services:
       - key: WEB_CONCURRENCY
         value: 4
       - key: CLOUDINARY_CLOUD_NAME
-        value: ${CLOUDINARY_CLOUD_NAME}
+        sync: false
       - key: CLOUDINARY_API_KEY
-        value: ${CLOUDINARY_API_KEY}
+        sync: false
       - key: CLOUDINARY_API_SECRET
-        value: ${CLOUDINARY_API_SECRET}
+        sync: false
