--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+dotenv==0.9.9
 drf-spectacular==0.28.0
 gunicorn==23.0.0
 h11==0.16.0
@@ -23,6 +24,7 @@ packaging==25.0
 pillow==10.4.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.36.2
 reportlab==4.4.2
